--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </div>
         <div class="content">
             <div class="left-content">
-                <h1>This website is awesome</h1>
-                <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <div class="content-tittle">This website is awesome</div>
+                <div class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button class="content-button">Sign up</button>
             </div>
             <div class="right-content">
-                <img href="asdf" alt="imagen">
-            </div>
+                <img href="asdf" alt="imagen"> 
+            </div> 
         </div>
     </div>
 
