--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="content">
             <div class="left-content">
-                <div class="content-tittle">Enfriandote hacia sabor</div>
+                <div class="content-tittle">Enfriandote hacia el sabor</div>
                 <div class="hero-secondary-text"> No podes comprar la felicidad pero si podes comprar helado, lo que es casi la misma cosa !</div>
                 <button class="content-button">Lista de sabores</button>
             </div>
@@ -57,8 +57,8 @@
     </div>    
     <div class="note-container">
         <div class="note">
-            <p class="note-text">"Muy buena atencion, precio y muy buena calidad. SUPER RECOMENDABLES...</p>
-            <p class="note-tittle">-Angelina Ortiz, Resenias de Google Maps</p>
+            <p class="note-text">"Muy buena atencion, precio y muy buena calidad. SUPER RECOMENDABLES..."</p>
+            <p class="note-tittle">-Angelina Ortiz, Reseñas de Google Maps</p>
         </div>
     </div>
     
@@ -76,7 +76,7 @@
     </div>
     
     <div class="footer">
-        Copyright jorge gaymer
+        Copyright © André Espinoza
     </div>
 </body>
 </html>
