make body 100 percent width

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="header-logo">Helados Rayito</div>
             <ul>
                 <li><img src="images/maps.png" class="icon"><a href="https://goo.gl/maps/269b4nBrZJxMkW3e9">Ubicacion</a></li>
-                <li><img src="images/whatsapp.png" class="icon"><a href="asd">Whatsapp</a></li>
+                <li><img src="images/whatsapp.png" class="icon"><a href="https://api.whatsapp.com/send/?phone=5491121690959&text=">Whatsapp</a></li>
                 <li><img src="images/instagram.png" class="icon"><a href="fsd">Instagram</a></li>
             </ul>
         </div>
